Retarget the editor to Java 8 so it compiles at work, replacing text blocks, Path.of, List.of, and isBlank with 8-safe equivalents
Co-authored-by: Cursor <cursoragent@cursor.com>